--- a/index.htm
+++ b/index.htm
@@ -6,10 +6,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>We Are Cultural Vistas</title>
 	<meta name="description" content="We Are Cultural Vistas: Cultural Vistas Annual Report 2016">
-	<meta property="og:url" content="http://www.lebowski.se/" />
+	<meta property="og:url" content="https://culturalvistas.org/annualreport/" />
 	<meta property="og:site_name" content="We Are Cultural Vistas" />
 	<meta property="og:title" content="We Are Cultural Vistas" />
 	<meta property="og:description" content="We Are Cultural Vistas: Cultural Vistas Annual Report 2016" />
+	<meta property="og:image" content="http://culturalvistas.org/annualreport/img/DSC00259-mobile.jpg" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="Cultural, Vistas, Annual, Report, 2016, Strengthening, Ties, Unite, Us">
 	<link rel="shortcut icon" href="img/favicon.png">
